# Music-U-Scheduler

./: .abacus.donotdelete  .env  .env.example  .gitignore  ADMIN_ENHANCEMENTS.md  AUTHENTICATION_FIX.md  AUTHENTICATION_FIXES_COMPLETE.md  AUTHENTICATION_FIXES_V1.3.01.md  CHANGELOG.md  CLEAN_INSTALLER_UPDATE.md  CLEAN_INSTALL_COMMANDS.md  COMPLETE_AUTHENTICATION_INTEGRATION.md  COMPREHENSIVE_INSTALLER_FIX.md  CUSTOM_DOMAIN_SETUP.md  DOWNLOAD_GUIDE.md  DOWNLOAD_SETUP_GUIDE.md  DOWNLOAD_SYSTEM_V1.3.02.md  FRESH_INSTALL_GUIDE.md  FRONTEND_UPDATE_GUIDE.md  GITHUB_CLEANUP_INSTRUCTIONS.md  GITHUB_UPDATE_GUIDE.md  INSTALL.md  INSTALLATION_FINAL_FIXES.md  INSTALLER_FIXES_V2.1.md  INSTALLER_FIX_NOTES.md  INSTALLER_UPDATE_GUIDE.md  LOGIN_AUTHENTICATION_FIXES.md  MANUAL_SETUP.md  QUICK_DOWNLOAD.md  README.md  RELEASE_v1.3.04.md  ROLE_SWITCHING_FEATURES.md  SERVICE_RESTART_FEATURES.md  SYSTEM_READY_SUMMARY.md  TROUBLESHOOTING.md  UPDATE_RESTART_FUNCTIONALITY.md  UPDATE_TO_V1.3.01.md  USER_MANAGEMENT_FIXES_V1.3.02.md  VERSION_SYSTEM_AND_FIXES_SUMMARY.md  VERSION_VERIFICATION_GUIDE.md  (+40 more)
.logs/: 20250815-024750-80d47ae8b6a747098cbbed4276b73166.out  20250815-024807-5084a1b9732a4e73b61ad60abfb552b8.out  20250815-024809-cecd86e7be794f60b7cea0b5c4b11786.err  20250815-024809-cecd86e7be794f60b7cea0b5c4b11786.out  20250815-024813-878a92d7cc26469bb2491ca43d2458ef.out  20250815-024843-1b3d991a30e9447dbedf5a70cc7f040e.out  20250815-024851-4c55a30b32cb4c67bcbfd41bc155a789.out  20250815-024852-1212e32da9dc4e4986487fdaa43ee93d.out  20250815-024921-96b62594a7d24bd49f63c44f559d69e9.out  20250815-025023-a5648056c8964c48a14417bd1995efe7.out  20250815-025218-542a9138a5a74cee87b05acf4f33a382.out  20250815-025220-4a52d2e15c404615a69d19f04de974d3.err  20250815-025220-4a52d2e15c404615a69d19f04de974d3.out  20250815-025222-f199e5b4b14f4c03a54a99a9813b8edb.out  20250815-025252-7679ddff5c2f43f18d99a0909959478a.out  (+122 more)
(+223 files in other folders)
